<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_element_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jduff.glowup.Element_config">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical">
        <!--<TextView-->
            <!--android:text="@string/color_choice"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/colorChoiceLbl" />-->
        <!--/>-->
        <!--<TextView-->
            <!--android:text="@string/hue_choice"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/hueChoiceLbl" />-->
        <!--/>-->
        <!--<SeekBar-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="2"-->
            <!--android:id="@+id/hue_choiceSkbr"-->
            <!--android:max="359"/>-->
        <!--<TextView-->
            <!--android:text="@string/sat_choice"-->
            <!--android:layout_weight="1"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/satChoiceLbl" />-->
        <!--/>-->
        <!--<SeekBar-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="2"-->
            <!--android:id="@+id/sat_choiceSkbr"-->
            <!--android:max="99"/>-->
        <com.example.jduff.glowup.ColorPickerView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/colorPickerView"
            app:src="@drawable/palette"
            app:selector="@drawable/wheel"
            />
        <TextView
            android:text="@string/val_choice"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/valueChoiceLbl" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/val_choiceSkbr"
            android:max="99"/>

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/colorPreviewView"
            android:layout_weight="1.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/time_choice"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeChoiceLbl" />
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/time_displayLbl"
                android:text="@string/time_default_text"/>

        </LinearLayout>

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/time_choiceSkbr"
            android:max="18"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/color_confirm"
                android:text="@string/color_confirm_txt"
                android:onClick="colorChoiceReturn"/>
            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:id="@+id/color_delete"
                android:text="@string/delete_text"
                android:onClick="deleteElement"
                />
        </LinearLayout>



    </LinearLayout>
</RelativeLayout>
